force-app/main/default/objects/Activity/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <label>得意先（テキスト）</label>
    <length>225</length>
    <type>Text</type>
</CustomField>