force-app/main/default/objects/Activity/fields/AccountID_18__c.field-meta.xml
<CustomField>
    <fullName>AccountID_18__c</fullName>
    <formula>IF (  BEGINS(WhatId , &apos;001&apos;) ,    CASESAFEID(WhatId) ,
Ju_kat210922__r.Account_ID_18__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先ID（18行）</label>
    <type>Text</type>
</CustomField>