force-app/main/default/objects/Activity/fields/AccountMemo__c.field-meta.xml
<CustomField>
    <fullName>AccountMemo__c</fullName>
    <label>「その他」取引先名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>