force-app/main/default/objects/Activity/fields/AccountTask1__c.field-meta.xml
<CustomField>
    <fullName>AccountTask1__c</fullName>
    <label>得意先宿題1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>