force-app/main/default/objects/Activity/fields/AccountTask1Flag__c.field-meta.xml
<CustomField>
    <fullName>AccountTask1Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>得意先宿題1作成済み</label>
    <type>Checkbox</type>
</CustomField>