force-app/main/default/objects/Activity/fields/AccountTask2__c.field-meta.xml
<CustomField>
    <fullName>AccountTask2__c</fullName>
    <label>得意先宿題2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>