force-app/main/default/objects/Activity/fields/AccountTask2Flag__c.field-meta.xml
<CustomField>
    <fullName>AccountTask2Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>得意先宿題2作成済み</label>
    <type>Checkbox</type>
</CustomField>