force-app/main/default/objects/Activity/fields/Achievements__c.field-meta.xml
<CustomField>
    <fullName>Achievements__c</fullName>
    <formula>if(RecordType.DeveloperName != &apos;Goal&apos; ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>実績</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>