force-app/main/default/objects/Activity/fields/ActivityTime__c.field-meta.xml
<CustomField>
    <fullName>ActivityTime__c</fullName>
    <label>活動時間（分）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>