force-app/main/default/objects/Activity/fields/Auto__c.field-meta.xml
<CustomField>
    <fullName>Auto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動作成</label>
    <type>Checkbox</type>
</CustomField>