force-app/main/default/objects/Activity/fields/BuildApp_MTGFlag__c.field-meta.xml
<CustomField>
    <fullName>BuildApp_MTGFlag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BuildApp週次MTG報告用</label>
    <type>Checkbox</type>
</CustomField>