force-app/main/default/objects/Activity/fields/BuildApp_scoringindex__c.field-meta.xml
<CustomField>
    <fullName>BuildApp_scoringindex__c</fullName>
    <label>BuildAppスコアリング指標</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BuildAppKeyman__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DX_Suishin_1</fullName>
                <label>問い合わせを受ける</label>
            </value>
            <value>
                <fullName>DX_Suishin_2</fullName>
                <label>アポイント承諾_DX推進者</label>
            </value>
            <value>
                <fullName>DX_Suishin_3</fullName>
                <label>2度目以降のアポイント承諾</label>
            </value>
            <value>
                <fullName>DX_Suishin_4</fullName>
                <label>課題の引き出し</label>
            </value>
            <value>
                <fullName>DX_Suishin_5</fullName>
                <label>現場情報の引き出し</label>
            </value>
            <value>
                <fullName>DX_Suishin_6</fullName>
                <label>今後の進め方への合意</label>
            </value>
            <value>
                <fullName>DX_Suishin_7</fullName>
                <label>導入に向けた具体的なアクションの確約</label>
            </value>
            <value>
                <fullName>DX_Suishin_71</fullName>
                <label>想定成果への合意</label>
            </value>
            <value>
                <fullName>DX_Suishin_8</fullName>
                <label>成果レポートの社内共有</label>
            </value>
            <value>
                <fullName>DX_Suishin_9</fullName>
                <label>本採用決済の獲得に向けた具体的なアクションの確約</label>
            </value>
            <value>
                <fullName>DX_Genba_1</fullName>
                <label>啓蒙完了_現場決裁者</label>
            </value>
            <value>
                <fullName>DX_Genba_2</fullName>
                <label>サービス名の認知完了_現場決裁者</label>
            </value>
            <value>
                <fullName>DX_Genba_3</fullName>
                <label>アポイント承諾_現場決裁者</label>
            </value>
            <value>
                <fullName>DX_Genba_31</fullName>
                <label>自物件でのトライアル合意_現場決裁者</label>
            </value>
            <value>
                <fullName>DX_Genba_4</fullName>
                <label>想定成果への合意_現場決裁者</label>
            </value>
            <value>
                <fullName>DX_Genba_5</fullName>
                <label>トライアル結果の認知（良かったと認める）_現場決裁者</label>
            </value>
            <value>
                <fullName>DX_Honsha_1</fullName>
                <label>啓蒙完了_本社決裁者</label>
            </value>
            <value>
                <fullName>DX_Honsha_2</fullName>
                <label>サービス名の認知完了_本社決裁者</label>
            </value>
            <value>
                <fullName>DX_Honsha_4</fullName>
                <label>トライアル結果の認知（良かったと認める）_本社決裁者</label>
            </value>
            <value>
                <fullName>DX_Honsha_5</fullName>
                <label>本採用の承認_本社決裁者</label>
            </value>
            <value>
                <fullName>DX_Honsha_3</fullName>
                <isActive>false</isActive>
                <label>想定成果への合意_本社決裁者</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>