force-app/main/default/objects/Activity/fields/BuildAppKeyman__c.field-meta.xml
<CustomField>
    <fullName>BuildAppKeyman__c</fullName>
    <label>BuildAppキーマン種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>決裁者_本社</fullName>
            </value>
            <value>
                <fullName>決裁者_現場</fullName>
            </value>
            <value>
                <fullName>DX推進者</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>