force-app/main/default/objects/Activity/fields/channelType__c.field-meta.xml
<CustomField>
    <fullName>channelType__c</fullName>
    <description>未選択の場合、「議事録」扱いとなります。</description>
    <inlineHelpText>未選択の場合、「議事録」扱いとなります。</inlineHelpText>
    <label>チャネル種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>電話</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>