force-app/main/default/objects/Activity/fields/Collaborator__c.field-meta.xml
<CustomField>
    <fullName>Collaborator__c</fullName>
    <label>協働者</label>
    <type>TextArea</type>
</CustomField>