force-app/main/default/objects/Activity/fields/Companion__c.field-meta.xml
<CustomField>
    <fullName>Companion__c</fullName>
    <label>同行者・同席者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>