force-app/main/default/objects/Activity/fields/CompatibilityStatus__c.field-meta.xml
<CustomField>
    <fullName>CompatibilityStatus__c</fullName>
    <label>FAQ依頼対応状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>対応中</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>