force-app/main/default/objects/Activity/fields/ComSheetCode__c.field-meta.xml
<CustomField>
    <fullName>ComSheetCode__c</fullName>
    <label>ComSheetCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>