force-app/main/default/objects/Activity/fields/ConstructionManagement__c.field-meta.xml
<CustomField>
    <fullName>ConstructionManagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>施工管理</label>
    <type>Checkbox</type>
</CustomField>