force-app/main/default/objects/Activity/fields/contact__c.field-meta.xml
<CustomField>
    <fullName>contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>活動</relationshipLabel>
    <relationshipName>katsudou_contact</relationshipName>
    <type>Lookup</type>
</CustomField>