force-app/main/default/objects/Activity/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <formula>IF(
  AND(
    OR(
      TEXT( CS__c ) = &quot;訪問&quot;,
      TEXT( CS__c ) = &quot;WEB面談&quot;
    ),
     Subject  &lt;&gt; &quot;目標&quot;,
     Subject &lt;&gt; &quot;訪問目標&quot;
  ),
  1,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>実績カウント</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>