force-app/main/default/objects/Activity/fields/CS__c.field-meta.xml
<CustomField>
    <fullName>CS__c</fullName>
    <label>種別（CS）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>訪問</fullName>
            </value>
            <value>
                <fullName>WEB面談</fullName>
            </value>
            <value>
                <fullName>架電</fullName>
            </value>
            <value>
                <fullName>メール送信</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>