force-app/main/default/objects/Activity/fields/CS_anzensyorui__c.field-meta.xml
<CustomField>
    <fullName>CS_anzensyorui__c</fullName>
    <label>安全書類</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>