force-app/main/default/objects/Activity/fields/CS_genbakakunin__c.field-meta.xml
<CustomField>
    <fullName>CS_genbakakunin__c</fullName>
    <label>現場確認</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>