force-app/main/default/objects/Activity/fields/CS_Goal__c.field-meta.xml
<CustomField>
    <fullName>CS_Goal__c</fullName>
    <label>目標_CS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>