force-app/main/default/objects/Activity/fields/CS_inquiry__c.field-meta.xml
<CustomField>
    <fullName>CS_inquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>川上問合せ</label>
    <type>Checkbox</type>
</CustomField>