force-app/main/default/objects/Activity/fields/CS_Keyman__c.field-meta.xml
<CustomField>
    <fullName>CS_Keyman__c</fullName>
    <formula>contact__r.CS_connectkeyman__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>数珠繋ぎキーマン</label>
    <type>Checkbox</type>
</CustomField>