force-app/main/default/objects/Activity/fields/CS_mitsumorisagyou__c.field-meta.xml
<CustomField>
    <fullName>CS_mitsumorisagyou__c</fullName>
    <label>見積作業</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>