force-app/main/default/objects/Activity/fields/CS_oppfhase__c.field-meta.xml
<CustomField>
    <fullName>CS_oppfhase__c</fullName>
    <label>商談フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D(初回見積提出)</fullName>
            </value>
            <value>
                <fullName>C(確認)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>