force-app/main/default/objects/Activity/fields/CS_other__c.field-meta.xml
<CustomField>
    <fullName>CS_other__c</fullName>
    <label>その他</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>