force-app/main/default/objects/Activity/fields/CS_othertext__c.field-meta.xml
<CustomField>
    <fullName>CS_othertext__c</fullName>
    <label>その他の内容</label>
    <length>100</length>
    <type>Text</type>
</CustomField>