force-app/main/default/objects/Activity/fields/CS_Priority__c.field-meta.xml
<CustomField>
    <fullName>CS_Priority__c</fullName>
    <formula>TEXT(contact__r.CS_StrategyPriority__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>攻略優先度</label>
    <type>Text</type>
</CustomField>