force-app/main/default/objects/Activity/fields/CS_Property__c.field-meta.xml
<CustomField>
    <fullName>CS_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS物件</label>
    <referenceTo>property__c</referenceTo>
    <relationshipLabel>活動</relationshipLabel>
    <relationshipName>CS_Property</relationshipName>
    <type>Lookup</type>
</CustomField>