force-app/main/default/objects/Activity/fields/CS_SAP__c.field-meta.xml
<CustomField>
    <fullName>CS_SAP__c</fullName>
    <label>SAP(工事書類)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>