force-app/main/default/objects/Activity/fields/CSTarget__c.field-meta.xml
<CustomField>
    <fullName>CSTarget__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(WhoId)),
    BEGINS(WhoId, &quot;003&quot;) 
  ),
  TEXT( contact__r.CS_Category__c ),
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ターゲットフラグ</label>
    <type>Text</type>
</CustomField>