force-app/main/default/objects/Activity/fields/DateValue__c.field-meta.xml
<CustomField>
    <fullName>DateValue__c</fullName>
    <formula>value(
left(text(ActivityDate), 4) 
&amp; 
mid(text(ActivityDate), 6, 2) 
&amp; 
mid(text(ActivityDate), 9, 2)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*日付（数値）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>