force-app/main/default/objects/Activity/fields/DeadLine1__c.field-meta.xml
<CustomField>
    <fullName>DeadLine1__c</fullName>
    <label>対応期限1</label>
    <type>Date</type>
</CustomField>