force-app/main/default/objects/Activity/fields/DeadLine2__c.field-meta.xml
<CustomField>
    <fullName>DeadLine2__c</fullName>
    <label>対応期限2</label>
    <type>Date</type>
</CustomField>