force-app/main/default/objects/Activity/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>担当部署_keizu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>