force-app/main/default/objects/Activity/fields/DocumentExportDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentExportDate__c</fullName>
    <label>ドキュメント出力日</label>
    <type>Date</type>
</CustomField>