force-app/main/default/objects/Activity/fields/DocumentExportUser__c.field-meta.xml
<CustomField>
    <fullName>DocumentExportUser__c</fullName>
    <label>ドキュメント出力ユーザー</label>
    <length>100</length>
    <type>Text</type>
</CustomField>