force-app/main/default/objects/Activity/fields/dx_AccountTask1__c.field-meta.xml
<CustomField>
    <fullName>dx_AccountTask1__c</fullName>
    <label>NextAction</label>
    <length>200</length>
    <type>Text</type>
</CustomField>