force-app/main/default/objects/Activity/fields/dx_AccountTask2__c.field-meta.xml
<CustomField>
    <fullName>dx_AccountTask2__c</fullName>
    <label>NextAction２</label>
    <length>200</length>
    <type>Text</type>
</CustomField>