force-app/main/default/objects/Activity/fields/dx_AccountTask3__c.field-meta.xml
<CustomField>
    <fullName>dx_AccountTask3__c</fullName>
    <label>NextAction３</label>
    <length>200</length>
    <type>Text</type>
</CustomField>