force-app/main/default/objects/Activity/fields/dx_deadline2__c.field-meta.xml
<CustomField>
    <fullName>dx_deadline2__c</fullName>
    <label>NextAction期限２</label>
    <type>Date</type>
</CustomField>