force-app/main/default/objects/Activity/fields/dx_deadline3__c.field-meta.xml
<CustomField>
    <fullName>dx_deadline3__c</fullName>
    <label>NextAction期限３</label>
    <type>Date</type>
</CustomField>