force-app/main/default/objects/Activity/fields/DX_EventId__c.field-meta.xml
<CustomField>
    <fullName>DX_EventId__c</fullName>
    <externalId>true</externalId>
    <label>DX_行動Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>