force-app/main/default/objects/Activity/fields/dx_katsudou_mokuteki__c.field-meta.xml
<CustomField>
    <fullName>dx_katsudou_mokuteki__c</fullName>
    <label>目的</label>
    <type>TextArea</type>
</CustomField>