force-app/main/default/objects/Activity/fields/dx_katudou_syousai__c.field-meta.xml
<CustomField>
    <fullName>dx_katudou_syousai__c</fullName>
    <label>詳細</label>
    <length>200</length>
    <type>Text</type>
</CustomField>