force-app/main/default/objects/Activity/fields/dx_ketteizikou14__c.field-meta.xml
<CustomField>
    <fullName>dx_ketteizikou14__c</fullName>
    <label>決定事項４</label>
    <type>TextArea</type>
</CustomField>