force-app/main/default/objects/Activity/fields/dx_ketteizikou1__c.field-meta.xml
<CustomField>
    <fullName>dx_ketteizikou1__c</fullName>
    <label>決定事項１</label>
    <type>TextArea</type>
</CustomField>