force-app/main/default/objects/Activity/fields/dx_ketteizikou2__c.field-meta.xml
<CustomField>
    <fullName>dx_ketteizikou2__c</fullName>
    <label>決定事項２</label>
    <type>TextArea</type>
</CustomField>