force-app/main/default/objects/Activity/fields/DX_Keyman__c.field-meta.xml
<CustomField>
    <fullName>DX_Keyman__c</fullName>
    <label>DX_キーマン</label>
    <length>200</length>
    <type>Text</type>
</CustomField>