force-app/main/default/objects/Activity/fields/dx_koudounaiyou_todo__c.field-meta.xml
<CustomField>
    <fullName>dx_koudounaiyou_todo__c</fullName>
    <label>行動内容（ToDo）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自社紹介</fullName>
            </value>
            <value>
                <fullName>提案</fullName>
            </value>
            <value>
                <fullName>ヒアリング</fullName>
            </value>
            <value>
                <fullName>アポ取り</fullName>
            </value>
            <value>
                <fullName>興味喚起</fullName>
            </value>
            <value>
                <fullName>提案・見積</fullName>
            </value>
            <value>
                <fullName>クロージング</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>