force-app/main/default/objects/Activity/fields/DX_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>DX_Name_Text__c</fullName>
    <label>名前（表示用）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>