force-app/main/default/objects/Activity/fields/DX_Nhr_Participants__c.field-meta.xml
<CustomField>
    <fullName>DX_Nhr_Participants__c</fullName>
    <label>野原参加者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>