force-app/main/default/objects/Activity/fields/DX_outline__c.field-meta.xml
<CustomField>
    <fullName>DX_outline__c</fullName>
    <label>概要</label>
    <type>TextArea</type>
</CustomField>