force-app/main/default/objects/Activity/fields/DX_SalesPolicy__c.field-meta.xml
<CustomField>
    <fullName>DX_SalesPolicy__c</fullName>
    <label>営業方針</label>
    <length>255</length>
    <type>Text</type>
</CustomField>