force-app/main/default/objects/Activity/fields/DX_SalesPolicyType2__c.field-meta.xml
<CustomField>
    <fullName>DX_SalesPolicyType2__c</fullName>
    <label>営業方針種別②</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DX_SalesPolicyType</valueSetName>
    </valueSet>
</CustomField>