force-app/main/default/objects/Activity/fields/DX_scoring__c.field-meta.xml
<CustomField>
    <fullName>DX_scoring__c</fullName>
    <label>スコアリング指標</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C：導入成果報告レポート提出</fullName>
            </value>
            <value>
                <fullName>問い合わせを受ける</fullName>
            </value>
            <value>
                <fullName>アポイント承諾_DX推進者</fullName>
            </value>
            <value>
                <fullName>2度目以降のアポイント承諾</fullName>
            </value>
            <value>
                <fullName>課題の引き出し</fullName>
            </value>
            <value>
                <fullName>現場情報の引き出し</fullName>
            </value>
            <value>
                <fullName>今後の進め方への合意</fullName>
            </value>
            <value>
                <fullName>導入に向けた具体的なアクションの確約</fullName>
            </value>
            <value>
                <fullName>成果レポートの社内共有</fullName>
            </value>
            <value>
                <fullName>本採用決済の獲得に向けた具体的なアクションの確約</fullName>
            </value>
            <value>
                <fullName>DX関連の情報を受け取る（拒否しない）_現場決裁者</fullName>
            </value>
            <value>
                <fullName>BuildApp関連の情報を受け取る（拒否しない）_現場決裁者</fullName>
            </value>
            <value>
                <fullName>アポイント承諾_現場決裁者</fullName>
            </value>
            <value>
                <fullName>想定成果への合意_現場決裁者</fullName>
            </value>
            <value>
                <fullName>BuildApp利用の継続的な承認</fullName>
            </value>
            <value>
                <fullName>DX関連の情報を受け取る（拒否しない）_本社決裁者</fullName>
            </value>
            <value>
                <fullName>BuildApp関連の情報を受け取る（拒否しない）_本社決裁者</fullName>
            </value>
            <value>
                <fullName>想定成果への合意_本社決裁者</fullName>
            </value>
            <value>
                <fullName>トライアル結果の認知（良かったと認める）</fullName>
            </value>
            <value>
                <fullName>本採用の承認</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>