force-app/main/default/objects/Activity/fields/dx_todo_syubetsu__c.field-meta.xml
<CustomField>
    <fullName>dx_todo_syubetsu__c</fullName>
    <label>種別</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ToDo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自社紹介</fullName>
            </value>
            <value>
                <fullName>提案</fullName>
            </value>
            <value>
                <fullName>ヒアリング</fullName>
            </value>
            <value>
                <fullName>クロージング</fullName>
            </value>
            <value>
                <fullName>アポ取り</fullName>
            </value>
            <value>
                <fullName>興味喚起</fullName>
            </value>
            <value>
                <fullName>提案・見積</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>