force-app/main/default/objects/Activity/fields/EN_AccountOwnerID__c.field-meta.xml
<CustomField>
    <fullName>EN_AccountOwnerID__c</fullName>
    <formula>Ju_kat210922__r.EN_OwnerId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>得意先所有者_EN</label>
    <type>Text</type>
</CustomField>