force-app/main/default/objects/Activity/fields/EN_tantoushiten__c.field-meta.xml
<CustomField>
    <fullName>EN_tantoushiten__c</fullName>
    <formula>Owner:User.EN_shiten__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>担当支店</label>
    <type>Text</type>
</CustomField>