force-app/main/default/objects/Activity/fields/EN_Target__c.field-meta.xml
<CustomField>
    <fullName>EN_Target__c</fullName>
    <formula>TEXT(Ju_kat210922__r.EN_Target__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ターゲット_EN</label>
    <type>Text</type>
</CustomField>