force-app/main/default/objects/Activity/fields/EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndDateTime__c</fullName>
    <label>終了(ToDo)</label>
    <type>DateTime</type>
</CustomField>