force-app/main/default/objects/Activity/fields/Event_Description__c.field-meta.xml
<CustomField>
    <fullName>Event_Description__c</fullName>
    <description>※システム利用
概要：フローで、ロングテキストからテキストエリアに値を格納させるために用意。
詳細：行動オブジェクトの「説明」のテキストを格納する項目
目的：関連リストに表示させるため</description>
    <label>行動-説明</label>
    <type>TextArea</type>
</CustomField>