force-app/main/default/objects/Activity/fields/EventID__c.field-meta.xml
<CustomField>
    <fullName>EventID__c</fullName>
    <description>元となった行動のIDを記録するためのシステム項目</description>
    <label>行動ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>