force-app/main/default/objects/Activity/fields/FAQ__c.field-meta.xml
<CustomField>
    <fullName>FAQ__c</fullName>
    <label>FAQ依頼</label>
    <type>TextArea</type>
</CustomField>