force-app/main/default/objects/Activity/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <formula>TEXT ( YEAR (ActivityDate) ) &amp; &quot;年&quot; &amp; TEXT ( MONTH (ActivityDate)) &amp; &quot;月&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>行動月</label>
    <type>Text</type>
</CustomField>