force-app/main/default/objects/Activity/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <label>移動</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>