force-app/main/default/objects/Activity/fields/ID_18__c.field-meta.xml
<CustomField>
    <fullName>ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>活動ID(18桁)</label>
    <type>Text</type>
</CustomField>