force-app/main/default/objects/Activity/fields/InitialDeadline__c.field-meta.xml
<CustomField>
    <fullName>InitialDeadline__c</fullName>
    <label>当初期限</label>
    <type>Date</type>
</CustomField>