force-app/main/default/objects/Activity/fields/JN_action_check__c.field-meta.xml
<CustomField>
    <fullName>JN_action_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>新戦略用</label>
    <type>Checkbox</type>
</CustomField>