force-app/main/default/objects/Activity/fields/JU_AccountOwnerID__c.field-meta.xml
<CustomField>
    <fullName>JU_AccountOwnerID__c</fullName>
    <formula>Ju_kat210922__r.JU_OwnerId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>得意先所有者_JU</label>
    <type>Text</type>
</CustomField>