force-app/main/default/objects/Activity/fields/JU_comment_sitsugi__c.field-meta.xml
<CustomField>
    <fullName>JU_comment_sitsugi__c</fullName>
    <label>コメント（質疑・指示事項）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>