force-app/main/default/objects/Activity/fields/Ju_hyoji1__c.field-meta.xml
<CustomField>
    <fullName>Ju_hyoji1__c</fullName>
    <label>内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>