force-app/main/default/objects/Activity/fields/Ju_kat210922__c.field-meta.xml
<CustomField>
    <fullName>Ju_kat210922__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連する取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>関連する取引先</relationshipLabel>
    <relationshipName>kat210922</relationshipName>
    <type>Lookup</type>
</CustomField>