force-app/main/default/objects/Activity/fields/JU_katsudou_syubetsu__c.field-meta.xml
<CustomField>
    <fullName>JU_katsudou_syubetsu__c</fullName>
    <label>種別（JU）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>訪問</fullName>
            </value>
            <value>
                <fullName>WEB面談</fullName>
            </value>
            <value>
                <fullName>架電</fullName>
            </value>
            <value>
                <fullName>メール送信</fullName>
            </value>
            <value>
                <fullName>仕入先打合せ</fullName>
            </value>
            <value>
                <fullName>社内打合せ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>