force-app/main/default/objects/Activity/fields/JU_kouzakaisetsu__c.field-meta.xml
<CustomField>
    <fullName>JU_kouzakaisetsu__c</fullName>
    <formula>Ju_kat210922__r.JU_AccountOpening__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>口座開設</label>
    <type>Checkbox</type>
</CustomField>