force-app/main/default/objects/Activity/fields/JU_shyukudai__c.field-meta.xml
<CustomField>
    <fullName>JU_shyukudai__c</fullName>
    <label>宿題の有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>宿題有り</fullName>
                <default>true</default>
                <label>宿題有り</label>
            </value>
            <value>
                <fullName>宿題無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>