force-app/main/default/objects/Activity/fields/JU_text__c.field-meta.xml
<CustomField>
    <fullName>JU_text__c</fullName>
    <label>顧客種別_JUtext</label>
    <length>255</length>
    <type>Text</type>
</CustomField>