force-app/main/default/objects/Activity/fields/JU_VisitCount__c.field-meta.xml
<CustomField>
    <fullName>JU_VisitCount__c</fullName>
    <label>*訪問カウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>