force-app/main/default/objects/Activity/fields/ka_syodan__c.field-meta.xml
<CustomField>
    <fullName>ka_syodan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談名</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>活動</relationshipLabel>
    <relationshipName>k_shodann</relationshipName>
    <type>Lookup</type>
</CustomField>