force-app/main/default/objects/Activity/fields/minutesNotSharedWithOtherBusiness__c.field-meta.xml
<CustomField>
    <fullName>minutesNotSharedWithOtherBusiness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>minutesNotSharedWithOtherBusiness</description>
    <label>議事録-他事業非共有flg</label>
    <type>Checkbox</type>
</CustomField>