force-app/main/default/objects/Activity/fields/nextChallengesOrActions__c.field-meta.xml
<CustomField>
    <fullName>nextChallengesOrActions__c</fullName>
    <label>次回への課題・アクション</label>
    <type>TextArea</type>
</CustomField>