force-app/main/default/objects/Activity/fields/NoharaG__c.field-meta.xml
<CustomField>
    <fullName>NoharaG__c</fullName>
    <label>野原G</label>
    <type>TextArea</type>
</CustomField>