force-app/main/default/objects/Activity/fields/NT_VisitDate__c.field-meta.xml
<CustomField>
    <fullName>NT_VisitDate__c</fullName>
    <label>訪問日</label>
    <type>Date</type>
</CustomField>