force-app/main/default/objects/Activity/fields/OpinioOpinion__c.field-meta.xml
<CustomField>
    <fullName>OpinioOpinion__c</fullName>
    <label>個人の見解・仮説・展望</label>
    <type>TextArea</type>
</CustomField>