force-app/main/default/objects/Activity/fields/ownerText__c.field-meta.xml
<CustomField>
    <fullName>ownerText__c</fullName>
    <label>所有者_テキスト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>